Replacing Jackett with Prowlarr

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,12 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./portainer-data:/data
+      - ./data/portainer:/data
     ports:
       - 9000:9000
+
   app:
-    image: 'jc21/nginx-proxy-manager:latest'
+    image: jc21/nginx-proxy-manager:latest
     container_name: nginx-manager
     restart: unless-stopped
     ports:
@@ -22,11 +23,13 @@ services:
       - '443:443'
     volumes:
       - ./config.json:/app/config/production.json
-      - ./data:/data
-      - ./letsencrypt:/etc/letsencrypt
+      - ./data/nginx-manager:/data
+      - ./data/letsencrypt:/etc/letsencrypt
+
   db:
-    image: 'yobasystems/alpine-mariadb:latest'
+    image: yobasystems/alpine-mariadb:latest
     container_name: mariadb
+    restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: 'npm'
       MYSQL_DATABASE: 'npm'
@@ -34,51 +37,74 @@ services:
       MYSQL_PASSWORD: 'npm'
     volumes:
       - ./data/mysql:/var/lib/mysql
-  sonarr:
-      image: linuxserver/sonarr
-      container_name: sonarr
-      ports:
-      - 8989:8989
-      volumes:
-      - ${CONFIG_DIR:?}/sonarr:/config
-      - ${MEDIA_DIR:?}/series:/tv
-      - ${DOWNLOAD_DIR:?}:/downloads
-      env_file: ./.env
-      restart: unless-stopped
+
   deluge:
       image: linuxserver/deluge
       container_name: deluge
+      restart: unless-stopped
       volumes:
-      - ${CONFIG_DIR:?}/deluge:/config
-      - ${DOWNLOAD_DIR:?}:/downloads
+      - ./data/deluge:/config
+      - ./ext-hdd/trrntz:/downloads
       env_file: ./.env
       ports:
         - 8112:8112
         - 6881:6881
         - 6881:6881/udp
-      restart: unless-stopped
-  plex:
-    image: plexinc/pms-docker
+
+  sonarr:
+    image: linuxserver/sonarr
+    container_name: sonarr
     restart: unless-stopped
-    container_name: plexms
     ports:
-      - 32400:32400/tcp
-      - 3005:3005/tcp
-      - 8324:8324/tcp
-      - 32469:32469/tcp
-      - 1900:1900/udp
-      - 32410:32410/udp
-      - 32412:32412/udp
-      - 32413:32413/udp
-      - 32414:32414/udp
-    env_file: ./.env
-    environment:
-      - HOSTNAME=”PlexServer”
-      # - PLEX_CLAIM=<get at plex.tv/claim>
+      - 8989:8989
     volumes:
-      - ${CONFIG_DIR:?}/plex:/config
-      - ${DOWNLOAD_DIR:?}:/media
-      - ${DOWNLOAD_DIR:?}/transcode:/transcode
-      
+      - ./data/sonarr:/config
+      - ./ext-hdd/trrntz:/downloads
+    env_file: ./.env
 
+  radarr:
+    image: lscr.io/linuxserver/radarr:latest
+    container_name: radarr
+    restart: unless-stopped
+    env_file: ./.env
+    volumes:
+      - ./data/radarr:/config
+      - ./ext-hdd/trrntz:/downloads
+    ports:
+      - 7878:7878
 
+  plex:
+    image: lscr.io/linuxserver/plex:latest
+    container_name: plex
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - VERSION=docker
+      - PLEX_CLAIM=claim-a1Hqyd_VrGxtWBZRvpab
+    volumes:
+      - ./data/plex:/config
+      - ./ext-hdd/trrntz:/media
+      - ./data/plex-transcode:/transcode
+
+  heimdall:
+    image: lscr.io/linuxserver/heimdall:latest
+    container_name: heimdall
+    restart: unless-stopped
+    env_file: ./.env
+    volumes:
+      - ./data/heimdall:/config
+    ports:
+      - 8088:80
+
+  prowlarr:
+    image: lscr.io/linuxserver/prowlarr:develop
+    container_name: prowlarr
+    restart: unless-stopped
+    env_file: ./.env
+    volumes:
+      - ./data/prowlarr:/config
+    ports:
+      - 9696:9696
+    
